Added CakeDC/Users plugin, for doing the admin. Re-added the pages controller. Added Players controller and stack. Updated the related table with a Won/Lost column to better help with display later.  Updated navigation to add home page. Created h1 logo link and added icon. Created Players views. Some style updates.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "app/Plugin/NiceAdmin"]
 	path = app/Plugin/NiceAdmin
 	url = https://github.com/davidyell/CakePHP-NiceAdmin.git
+[submodule "app/Plugin/Users"]
+	path = app/Plugin/Users
+	url = https://github.com/CakeDC/users.git
