--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "app/Plugin/Users"]
 	path = app/Plugin/Users
 	url = https://github.com/CakeDC/users.git
+[submodule "app/Plugin/Linkable"]
+	path = app/Plugin/Linkable
+	url = https://github.com/ProLoser/linkable.git
